--- a/targets/x86/iso/boot/grub/grub.cfg
+++ b/targets/x86/iso/boot/grub/grub.cfg
@@ -1,7 +1,8 @@
 set timeout=0
 set default=0
 
-menuentry "my os" {
-	multiboot2 /boot/kernel.bin
-	boot
+menuentry "my os"
+{
+    multiboot2 /boot/kernel.bin
+    boot
 }
